<resources>
    <string name="app_name">Simple To Do</string>
    <string name="enter_a_new_task_to_do">Enter a new task to do</string>
    <string name="add">ADD</string>
    <string name="clear">CLEAR</string>
    <string name="delete">DELETE</string>
    <string name="to_do_list">TO-DO LIST</string>
    <string-array name="spinner_items">
        <item>Add a new task</item>
        <item>Remove a task</item>
    </string-array>
</resources>